# RallyRobotPilot_2025

./: .gitignore  Dockerfile.headless  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  setup.py
assets/NotSoSimpleTrack/: NSEnvironment.mtl  NSObstacles.mtl  NSTrack.mtl  track_metadata.json
assets/SimpleTrack/: Environment.mtl  Obstacles.mtl  Track.mtl  track_metadata.json
assets/SlightlyHarder/: track_metadata.json
assets/VisualTrack/: IntersectionObstacles.mtl  IntersectionRoad.mtl  track_circuit2_metadata.json  track_circuit3_metadata.json  track_metadata.json
assets/cars/: sports-car.mtl
assets/particles/: particles.mtl
assets/utils/: line.mtl
data/: record_0.npz  record_1.npz  record_2.npz  record_3.npz  record_4.npz  record_5.npz  record_6.npz
data_images/: image_scaler.py
docker/: Dockerfile.gui  Dockerfile.headless  docker-compose.yaml  xvfb-startup.sh
rallyrobopilot/: __init__.py  car.py  checkpoint.py  checkpoint_manager.py  clock.py  frame_input.py  game_launcher.py  generation_stats.py  genetic_manager.py  genetic_player.py  genetic_settings.py  mutation_strategy.py  particles.py  recorder.py  remote_controller.py  sensing_message.py  track.py  trajectory.py  trajectory_optimizer.py  trajectory_point.py  trajectory_segment.py
scripts/: comparator.py  data_collector.py  data_reader.py  example_autopilot.py  generator_multi.py  genetic.py  genetic_multi.py  image_extractor.py  main.py  mesh_splitter.py  recorder.py  replay_autopilot.py  replayer.py  super_racer.py  visual_racer.py
