[project]
name = "rallyrobotpilot-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "matplotlib>=3.10.7",
    "pyqt6>=6.10.0",
    "scikit-learn>=1.7.2",
    "setuptools>=80.9.0",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
]
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]
